--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "chai-bignumber": "^2.0.2",
     "lite-server": "^2.3.0",
     "nodemon": "^2.0.12",
-    "truffle": "^5.1.65",
-    "truffle-contract": "3.0.6"
+    "truffle": "^5.4.2",
+    "truffle-contract": "^3.0.6"
+  },
+  "dependencies": {
+    "jquery": "^3.6.0"
   }
 }
